manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goweb-deployment
  namespace: azuredevopsapp
  labels:
    app: goweb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: goweb
  template:
    metadata:
      labels:
        app: goweb
    spec:
      containers:
      - name: goweb
        image: alexrampuptest.azurecr.io/alexramuptest20230209:v1
        ports:
        - containerPort: 8000
