manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: goweb
  name: my-goweb
  namespace: azuredevopsapp
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: goweb
  type: ClusterIP
