manifests/dev_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tls
  namespace: azuredevopsapp
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dev.demo.azure.com
    secretName: ingress-tls-csi
  rules:
  - host: demo.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-goweb
            port:
              number: 8000
